[package]
name = "visuals"
version = "0.1.0"
authors = ["Rj Rybarczyk <rj@rybar.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = { path = "../../tmp/ggez" }
cgmath = { version = "0.17", features = ["mint"]}
gfx = "0.18"

cpal = "0.11.0"
anyhow = "1.0.12"
hound = "3.4"
ringbuf = "0.1.6"
